added some basic classes